src/test/compile-fail/block-must-not-have-result-res.rs
// error-pattern:statement with non-unit type requires a semicolon

resource r(i: int) {
    true
}

fn main() {
}
